removed a few -webkit- CSS entries for older browsers

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 <!-- main section with additional advert for mobile only -->
                 <main id="main">
                     <article>
+                        <h1>title placeholder</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem maiores cum corrupti possimus
                             blanditiis quaerat eligendi, non perferendis nesciunt, omnis accusantium, officia suscipit
                             excepturi asperiores eos placeat. Corrupti, omnis vero.
