added some extra ad banners + RNG with JS and jQuery to simulate random ad placement

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
             crossorigin="anonymous">
 
+        <!-- jQuery link -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
         <!-- unknown error fix #1 -->
         <link rel="shortcut icon"
             href="#">
@@ -35,10 +38,10 @@
 
     <body>
 
-        <!-- figure for fixed background + black underlay to avoid white flash -->
+        <!-- figure for fixed background(unused) + black underlay to avoid white flash -->
         <figure>
             <div class="black"></div>
-            <div id="fixed"></div>
+            <!-- <div id="fixed"></div> -->
         </figure>
 
         <!-- outside wrapper with margins-->
@@ -176,6 +179,7 @@
 
         </div>
 
+        <script src="script.js"></script>
     </body>
 
 </html>
