added side content, header right content, fixed header column span

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             content="ie=edge">
 
         <!-- Google font link -->
-        <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap"
+        <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap"
             rel="stylesheet">
 
         <!-- Font Awesome link -->
@@ -53,7 +53,7 @@
                 <!-- header section -->
                 <header id="header">
                     <div class="header_top">
-                        <div class="logo"> <img src="img/logo.png"
+                        <div class="logo"><img src="img/logo.png"
                                 alt="company logo lightning bolt"></div>
                     </div>
                     <nav class="header_left">
@@ -65,7 +65,11 @@
                         </ul>
                     </nav>
                     <div class="header_right">
-                        <button type="button">click me</button>
+                        <ul>
+                            <li>Log in</li>
+                            <li>|</li>
+                            <li>Register</li>
+                        </ul>
                     </div>
                 </header>
 
@@ -101,20 +105,46 @@
 
                     <div class="advert_mobile shadow"></div>
 
-                    <div class="article_list">
+                    <div class="article_list hover_link">
                         <p>Check out our sponsors:</p>
                         <ul>
-                            <li><a href="https://www.promarperformanceengines.com/">Promar</a></li>
-                            <li><a href="https://www.michelinman.com/">Michelin</a></li>
-                            <li><a href="https://www.castrol.com/">Castrol</a></li>
-                            <li><a href="https://www.redbull.com">Red Bull</a></li>
+                            <li><a href="https://www.promarperformanceengines.com/"
+                                    target="_blank">Promar</a></li>
+                            <li><a href="https://www.michelinman.com/"
+                                    target="_blank">Michelin</a></li>
+                            <li><a href="https://www.castrol.com/"
+                                    target="_blank">Castrol</a></li>
+                            <li><a href="https://www.redbull.com"
+                                    target="_blank">Red Bull</a></li>
                         </ul>
                     </div>
 
                 </main>
 
                 <!-- sidebar section -->
-                <aside id="aside">aside</aside>
+                <aside id="aside"
+                    class="hover_link">
+
+                    <ul>
+                        <li>
+                            <div class="aside_content_images shadow">
+                                <img src="img/side_1.jpg"
+                                    alt="orange mercedes hood">
+                            </div>
+                            <a href="https://www.hotcars.com/20-retro-cars-that-are-quietly-making-a-comeback/">Retro
+                                cars!</a>
+                        </li>
+                        <li>
+                            <div class="aside_content_images shadow">
+                                <img src="img/side_2.jpg"
+                                    alt="retro mercedes front">
+                            </div>
+                            <a href="https://www.mercedes-benz.com/en/mercedes-benz/classic/museum/">Mercedes
+                                museum!</a>
+                        </li>
+                    </ul>
+
+                </aside>
 
                 <!-- footer section -->
                 <footer id="contacts">
