added missing target blanks for links and decreased margins in header_right for mobile

--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
                                 <img src="img/side_1.jpg"
                                     alt="orange mercedes hood">
                             </div>
-                            <a href="https://www.hotcars.com/20-retro-cars-that-are-quietly-making-a-comeback/">Retro
+                            <a href="https://www.hotcars.com/20-retro-cars-that-are-quietly-making-a-comeback/"
+                                target="_blank">Retro
                                 cars!</a>
                         </li>
                         <li>
@@ -139,7 +140,8 @@
                                 <img src="img/side_2.jpg"
                                     alt="retro mercedes front">
                             </div>
-                            <a href="https://www.mercedes-benz.com/en/mercedes-benz/classic/museum/">Mercedes
+                            <a href="https://www.mercedes-benz.com/en/mercedes-benz/classic/museum/"
+                                target="_blank">Mercedes
                                 museum!</a>
                         </li>
                     </ul>
