resized image resolution

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                             corporis quae rem?</p>
                     </article>
 
+                    <!-- advert for mobile -->
                     <div class="advert_mobile shadow"></div>
 
                     <div class="article_list hover_link">
